# ChangeLog for net-analyzer/ettercap
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.165 2015/03/30 10:02:43 ago Exp $

  30 Mar 2015; Agostino Sarubbo <ago@gentoo.org> ettercap-0.8.2.ebuild:
  Stable for alpha, wrt bug #532764

  30 Mar 2015; Agostino Sarubbo <ago@gentoo.org> ettercap-0.8.2.ebuild:
  Stable for sparc, wrt bug #532764

  26 Mar 2015; Agostino Sarubbo <ago@gentoo.org> ettercap-0.8.2.ebuild:
  Stable for ppc64, wrt bug #532764

  26 Mar 2015; Agostino Sarubbo <ago@gentoo.org> ettercap-0.8.2.ebuild:
  Stable for ppc, wrt bug #532764

  24 Mar 2015; Markus Meier <maekke@gentoo.org> ettercap-0.8.2.ebuild:
  arm stable, bug #532764

  18 Mar 2015; Agostino Sarubbo <ago@gentoo.org> ettercap-0.8.2.ebuild:
  Stable for amd64, wrt bug #532764

  17 Mar 2015; Andreas Schuerch <nativemad@gentoo.org> ettercap-0.8.2.ebuild:
  x86 stable, see bug 532764

*ettercap-0.8.2 (14 Mar 2015)

  14 Mar 2015; Agostino Sarubbo <ago@gentoo.org> +ettercap-0.8.2.ebuild:
  Version bump to 0.8.2

  17 Dec 2014; Jeroen Roovers <jer@gentoo.org> ettercap-0.8.1-r1.ebuild:
  Restore mysteriously dropped keywords.

  05 Nov 2014; Mike Frysinger <vapier@gentoo.org> ettercap-0.8.0-r1.ebuild,
  ettercap-0.8.1-r1.ebuild, ettercap-0.8.1.ebuild, ettercap-9999.ebuild:
  Drop libtool dep as the source only checks for -ldl now #528294 by Pacho
  Ramos.

  03 Nov 2014; Rick Farina <zerochaos@gentoo.org> ettercap-0.8.1-r1.ebuild,
  ettercap-9999.ebuild:
  various fixes for building docs and making the ebuild maintenance easier

  02 Nov 2014; Rick Farina <zerochaos@gentoo.org> ettercap-0.8.1-r1.ebuild:
  adding misc maintainer note to ebuild, super bad form but otherwise it will be
  forgotten

*ettercap-0.8.1-r1 (02 Nov 2014)

  02 Nov 2014; Rick Farina <zerochaos@gentoo.org> +ettercap-0.8.1-r1.ebuild:
  fix for optional pdf dep, bug #527646, disable building of pdfs that don't
  even get installed
