@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test
-DEPEND=dev-libs/libpcre dev-libs/openssl net-libs/libnet:1.1 >=net-libs/libpcap-0.8.1 sys-libs/zlib gtk? ( >=dev-libs/atk-1.2.4 >=dev-libs/glib-2.2.2:2 media-libs/freetype x11-libs/cairo x11-libs/gdk-pixbuf:2 >=x11-libs/gtk+-2.2.2:2 >=x11-libs/pango-1.2.3 ) ncurses? ( >=sys-libs/ncurses-5.3 ) plugins? ( >=net-misc/curl-7.26.0 ) app-text/ghostscript-gpl sys-devel/flex virtual/yacc sys-devel/make >=dev-util/cmake-2.8 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
-DESCRIPTION=A suite for man in the middle attacks
-EAPI=5
-HOMEPAGE=https://github.com/Ettercap/ettercap
-IUSE=gtk ipv6 ncurses +plugins
-KEYWORDS=alpha amd64 arm ppc ppc64 sparc x86 ~x86-fbsd
-LICENSE=GPL-2+
-RDEPEND=dev-libs/libpcre dev-libs/openssl net-libs/libnet:1.1 >=net-libs/libpcap-0.8.1 sys-libs/zlib gtk? ( >=dev-libs/atk-1.2.4 >=dev-libs/glib-2.2.2:2 media-libs/freetype x11-libs/cairo x11-libs/gdk-pixbuf:2 >=x11-libs/gtk+-2.2.2:2 >=x11-libs/pango-1.2.3 ) ncurses? ( >=sys-libs/ncurses-5.3 ) plugins? ( >=net-misc/curl-7.26.0 )
-SLOT=0
-SRC_URI=https://github.com/Ettercap/ettercap/archive/v0.8.0.tar.gz -> ettercap-0.8.0.tar.gz
-_eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
-_md5_=01b83bc0c02ecc3392700805b673ad0b
