@@ -1,30 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST ettercap-0.8.0.tar.gz 7069131 SHA256 8013e2bbfc69af2939d8a40e6b31de5016fe75401e4b73207a0a8ac9053ac9bc SHA512 6d32b229378af5aea1dc82537f84a36c557021a01ccf40f228e69f6e39baa3f3becbb6138417bcad2951811d9ea57e89f960f7bb132fc09502e0b08f7a4ca813 WHIRLPOOL 87fc8ffbfa8ebe67b382888b2b9e5aa5ef9059bc5c46c52628e13f62bb4f519362834d865ec4e51ed5b3db7de5832dc0756a708768dc040dd6aa0264db2f474b
-DIST ettercap-0.8.1.tar.gz 7903301 SHA256 d9e39e8f76eebc7fcfd8580dc909632328cd34f336a4486f463d08a967712db2 SHA512 8985eac4cb35f85faf85d98940c9169be21beac47ac92a5e6db12ced1749f3a65b2b985edd23d8a9bdb0580bae26ec788ffd9373c5dbab518ad32c7216954f97 WHIRLPOOL 63ad24c542b16660c0ac34e79bf7dea0380d73c3709f0cf38bd34edde560a06fb39ea4f493ba69306f6f08cf3e3ef82a81fcfa0c550d789e9dc1db26a6f18cb8
 DIST ettercap-0.8.2.tar.gz 8082561 SHA256 f38514f35bea58bfe6ef1902bfd4761de0379942a9aa3e175fc9348f4eef2c81 SHA512 18137b1cc518c9db3c9650157a5cbf09dbb665b79876a24875d6c5125e8923ebde543464adb61cf1d1244101242f4d66b80d94ef3b36aa265cefca7646aa6415 WHIRLPOOL 3acc250a8c8929cf3f5533edf0e4657b8670525542f1f727c0ecd2af560db9de9004c16e880f05577fffa5cedd5535b448d4e675e3adbd4ae11675ee8f229bfd
-EBUILD ettercap-0.8.0-r1.ebuild 1445 SHA256 3c0cd3985305c60a9bdecf31a461132960539af28c2dd14b69aa62c604bce400 SHA512 78b16965348e1d0dd0bd78aff482a12826d45a364a20e1cc8ae3de02c0302e37220fb0fb830976069311c9f4a5e43bf012db329807ec486edf6e4df3d4b641b2 WHIRLPOOL 072483b48e6ff61f21349e26cfcd9ef3100b4b18d26f5a665e7c4b579b135841136485160dfc6d680b59399af1e6fb622e6dba91eb02f1fc8fc55d4e57c87a97
-EBUILD ettercap-0.8.1-r1.ebuild 1783 SHA256 958bbbfa9b09d0fa6fb733609c0f4de0471ca556e946d5c9ec9cbf43623877c6 SHA512 cc833892aa14e3d16a66e1bbe92255272693126a262f2e2205bea34042c824c30f9a57ec5e0e1d4af3c7e1db53ecce55552b1cc9f9b4929016be5efa799c793a WHIRLPOOL 2ffb7dadad727e9a76f0eada8803eba83f726a97d7c0aaf32e4dabd94aba110864932528eaddc6e10f8eab4be4156ed9b113b6ff7bd3a118863dbf2a0a3fcb93
-EBUILD ettercap-0.8.1.ebuild 1385 SHA256 1e3545c0c5a8f2ee3379b423992353212fcc1a3a547428d6fabdb1fa2856cc54 SHA512 933a571dce671c353b7b20734579611f290ad5d749aaf44fe34a67d8577ea420ad3c67d73b220ee70b15b978f68fdba37445829e1e9578946f88d0a80b12c0af WHIRLPOOL 46f46ea9a7bca77224cebb772a14547daf5799a64d1cca3364e142fb194be3518a7f39478ee41bf853403eb53ff2f060fbdf3037928bd1a2bd006e1d38c2d2a1
 EBUILD ettercap-0.8.2.ebuild 1773 SHA256 661f3a35ed0a4d9e8812cafe9060dfb45b91509d315d3c8ff7ede7ac13587ba3 SHA512 5fbaf6287719bb2713588bb3c52f8f5865ff6f10b5c14bada5cebfb288d64538552def8a2e01d0b92504258fa481ee2c39a7d5e84905250022938e17d097ba3c WHIRLPOOL fe3d206bc569faa0ff31d68ec7735c571051851833d202b2c9dae36727913a9ca5a56587f4a1b2937e3c1d55c3cf3784edd6c91cf170612e8495a988d11c6d62
 EBUILD ettercap-9999.ebuild 2024 SHA256 2c9247a7c41e9532bf475325674fb5e100e20074da7eb2edcaca9b1d585a3904 SHA512 ae0a29a9619b74f854950d238079b36cea105b84d36baca377a8afdc63055dd4e2f1946c382307231330bf386c0d766dfac1e03b4de14c8d6db96dfae9a1246e WHIRLPOOL 21527ad8ea149783775707b722fcf65cba07df6512685b5c06be0e816b1bb4dde13bb52185867106b187b022ee7a097b0e2f49cb8dbd4cfefaee01557ccbce89
-MISC ChangeLog 22152 SHA256 430946188581b89e194536b7d3f94566d4c9c82d436b424f97357798d636ea23 SHA512 cad7a893a4c82363332d1d569fc07c92a06f6f98f436f88341eb6152fb69d831a67bc77f3207af9936a7ba11d6a8c97fafd7379a2d88ca99e2a2ffb5d0a975b6 WHIRLPOOL ea3889277630599ef4fbeb47775e53321617dced2e34eefaef3d89dab5c692bc814512b6e542dfcfe8f6f27951972206d76fd6aedb2b8a877b36df60d27613b7
+MISC ChangeLog 22295 SHA256 ac8da1367d3f7b72f8a2621f2880416422009247cd51675a7a2a05d99b324e1f SHA512 9edad2e9cdf22c2dc7a289b4518db2e7a3219e9584404f922e6c7a31cbf4dbb1a6091de2b4599faf1aebbf5f3844b3a01cedb018a3142f6cc285efc5082a4518 WHIRLPOOL ce858740ffe5c912721948cb682d31e2b1fdfe85845dfb752d68d35dce864ff6884da5d458cf62ea93a25ce2843458e0295af3ae5cd0adaa4d8457838be25f46
 MISC metadata.xml 427 SHA256 df1df8dc55dfb15c332c0938d2f83c895064ee666f794954f94b65316e887b7e SHA512 b60f7bbcca835cccbd88128a4a15c08735b8cf0c454b4c6641c5c884d014f476daaf518758ce5f33882641681e3305090c7770cec3a14c73c59fbc97ba65b078 WHIRLPOOL 3f07037b068ca3ead4d9fcc0fd790a6b6896d6fd045798c0cdaa02ee66e05ce9d506f5b87c3625141d79ee3d388ff7ec033e4a863e17271f5e971a7b6c3eb5d6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVGR9EAAoJELp701BxlEWfb+8P/2iibRnp54sRQc1y/hFZ97Z0
-vu1hp8+NNFbn0QZmS8NDX9CtV6mxu5QT5s2x5AKupDTXJLOgBrfWFYhaa3TBrlKV
-6vbB2DgIjp1HIykGEOyRLRgGFb+D3Fv+9WJpRooqeu/BohR4BuYv1J8pLiTOCT3h
-J7oplwp5Op5UNrN+X/s+FOIaXwzoGf9mgzcjYIiUkamo9guE7/XLkCEekzPD64w2
-ks9ZYta2oKAIQqKfBDu3zdAtS4iijaopGsKl9lOaw/cxks3oM3mOXoMOgezYoADQ
-nwXQOXRXT9pltYvMCk5bOwVNczHYwSFAkAh17W9pXemaAiMxMmGc/dTKV2V1OpCq
-eZqwDhTcBZpXfHJz85Y/tssjae/IaqhCJb5VHbpPQKkVIWaJDUUQJNc4SRleIQm/
-FWZn5NWBrNAKZ+GijCUl0eHFxuQBgrfpg/CWN3EuI7jShtZ/qJQB9WZ1SgXmrmyi
-AwFvut1cwLKwKdIRVhVbyVRn8+MqunNgnwjZLB1q+3mqBLE/c/Hs6GGIh9XGi508
-5fZ6qkRMaWnglI56QJ0ieGyb09uoIzwcR4My6xBc+gV2PYgCKQ+ggPTtQ8+/ZIDn
-vRhPavjdje91gI9az3Z8TVy/n78h8XMaGCb7VLfnCyUbkpn1VnIp5zjtuIYIyh1l
-u55L+pvGIbV3rZFtDW7Q
-=D28u
+iQIcBAEBCAAGBQJVGq20AAoJELp701BxlEWfpzcP/1kK41W3bV8ANVzkuKgdb8bK
+0ZawohONxiSMGQliyT+mh4BA38k8853FYlpCZ9++y2M7A6rtBGAj2YZJ0zw2WBYY
+9zsyd177AwE9cbhML/qPjik4ppinpaD1MybmgtNAm8DCVyZIAe8vDxabzMp06fIp
+0RIHWUog2SUfr9FrwQQymr91TIgUGZ8TXgNPAif23N9drKGZxJDi5WrZJCltUwCM
+Ip18kJUju8ubrxB5GCezCAJPoMXN54JiLDnvSrZ5pGfmsmN/hhwQMjTfoC/DE/dU
+xKEWuloZ/TSQjg9gY2X9Xsakt+h/4BKTaKyG0RQ28OHQgdRJBOcf/iZdP3Zv9OFK
+ZPMU291FDWit/uA577RiBQlDKpt6yOsV+iCJ9NlEUIoQ1MwW+n9P/IQxv9VDybds
+2x0Du4v7NhI+L9bmeGIhjdMz4ksWrlYVk3P8t+v99wG8T9B/ZwrOhSxMW5hPRvwP
+vhsXt4HuIMzrzA5fuynQVQPxf/sv6fJQxzxzRW96Os0Lfzc8BD1TrjeXdWasGFQn
+abf9dfMUvc91oc4KnTR1Hv8RTd56kVPofXmHGF0O7qLUoNwd2Lo8FmA4tM2u+Pm2
+oMY64Z9FSjv+8tCOT3KtOlhoRZB6a7Hw1lu9qNOb8MzRvfkzBiDCA9e/39zQXwT0
+N5GMrN67E0M1UImzdmU1
+=ZBiT
 -----END PGP SIGNATURE-----
