@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/ettercap
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.165 2015/03/30 10:02:43 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.166 2015/03/31 14:22:43 ago Exp $
+
+  31 Mar 2015; Agostino Sarubbo <ago@gentoo.org> -ettercap-0.8.0-r1.ebuild,
+  -ettercap-0.8.1-r1.ebuild, -ettercap-0.8.1.ebuild:
+  Remove old
 
   30 Mar 2015; Agostino Sarubbo <ago@gentoo.org> ettercap-0.8.2.ebuild:
   Stable for alpha, wrt bug #532764
